Prevent wrapping

--- a/src/app/bolker/tidsperiode-bolk/tidsperiodeBolk.less
+++ b/src/app/bolker/tidsperiode-bolk/tidsperiodeBolk.less
@@ -3,7 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     &__fra {
-        margin-right: 1rem;
+        padding-right: 1rem;
         padding-bottom: 0.5rem;
         max-width: 50%;
         @media (max-width: @mobile-breakpoint) {
@@ -11,7 +11,7 @@
         }
     }
     &__til {
-        margin-right: 1rem;
+        padding-right: 1rem;
         padding-bottom: 0.5rem;
         max-width: 50%;
         @media (max-width: @mobile-breakpoint) {
